# invest-journal

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  tools.py
backend/: backend.txt
backend/notebooks/: csv_extract.ipynb  extract.ipynb  extract_prototype.ipynb  transform_account_endpoints.ipynb  transform_market_endpoints.ipynb  transform_prototype.ipynb
diagrams/: infrastructure.py  infrastructure_alt_1.py  infrastructure_alt_2.py
frontend/: frontend.txt  package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/(dashboard)/History/: page.js
frontend/src/app/(dashboard)/Journal/: page.js
frontend/src/app/(dashboard)/Overview/: page.js
frontend/src/app/(dashboard)/Positions/: page.js
frontend/src/app/components/Layout/: NavPanel.js
frontend/src/app/providers/: providers.js  themeProvider.js
